tests/fixtures/invalid/none_in_bytes.py
# Cannot use 'in' with None and Bytes
x: bool = None in b"hello"
